--- a/index.html
+++ b/index.html
@@ -310,14 +310,14 @@
 <span><details>
   <summary>Statistiques: films vu par pays</summary>
   (n'inclut pas les films américains et français, vus en grand nombre)
-  <pre style="font-size: 20px;line-height: 32px;">█████████████████████████████████████████████ 45 🇬🇧
-█████████████████████████████ 29 🇯🇵
+  <pre style="font-size: 20px;line-height: 32px;">██████████████████████████████████████████████ 46 🇬🇧
+██████████████████████████████ 30 🇯🇵
 ██████████████████ 18 🇩🇪
 █████████████████ 17 🇪🇸
 ███████████████ 15 🇮🇹
 ████████████ 12 🇰🇷
-████████ 8 🇨🇳
-███████ 7 🇲🇽 🇷🇺
+████████ 8 🇨🇳 🇷🇺
+███████ 7 🇲🇽
 ██████ 6 🇩🇰 🇭🇰 🇮🇷 🇸🇪
 █████ 5 🇮🇳 🇹🇷
 ████ 4 🇦🇺
@@ -353,7 +353,7 @@
 1964: ████ 4
 1965: ██████ 6
 1966: ██████ 6
-1967: ████ 4
+1967: █████ 5
 1968: ████ 4
 1969: ████ 4
 1970: █████ 5
@@ -393,26 +393,26 @@
 2004: ████████████████████████████ 28
 2005: ████████████████████████ 24
 2006: ████████████████████████████ 28
-2007: ███████████████████████ 23
+2007: ████████████████████████ 24
 2008: █████████████████████████████ 29
 2009: ██████████████████████████████ 30
 2010: █████████████████████████████ 29
 2011: ██████████████████████████████ 30
 2012: █████████████████████████ 25
-2013: ████████████████████████████████████ 36
+2013: ██████████████████████████████████████ 38
 2014: ████████████████████████████████ 32
 2015: █████████████████████ 21
 2016: █████████████████████████ 25
 2017: ███████████████████████████ 27
 2018: ████████████████████████████████████ 36
-2019: ██████████████████████████████ 30
+2019: ███████████████████████████████ 31
 2020: █████████████████ 17
 2021: ████████████████████████ 24
 2022: ████████████████████████████████ 32
-2023: ████████████████████████████████████████████████████████████ 60
-2024: ██ 2
+2023: █████████████████████████████████████████████████████████████ 61
+2024: ███ 3
 
-total: 1043</pre>
+total: 1050</pre>
 </details>
 </span><h2 class="heading-element">Mon top 15 films préférés</h2>
 <a id="user-content-mon-top-15-films-préférés" class="anchor" aria-label="Permalink: Mon top 15 films préférés" href="#mon-top-15-films-pr%C3%A9f%C3%A9r%C3%A9s"><span aria-hidden="true" class="octicon octicon-link"></span></a>
@@ -739,6 +739,7 @@ total: 1043</pre>
 <ul>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//5Fa6o5nfUPEatQ9b3OwEvdEdR7T.jpg");' onmouseleave='setPosterPath("");'>Le Samouraï (Jean-Pierre Melville) 🎥🎥 #policier</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//hfGzYErvwi8hB38kCsSNy6OjdPv.jpg");' onmouseleave='setPosterPath("");'>La Chinoise (Jean-Luc Godard)</li>
+<li>bof: Playtime (Jacques Tati)</li>
 </ul>
 <div class="markdown-heading">
 <h3 class="heading-element" id="1968">1968 <a href="#top">↑</a>
@@ -1696,6 +1697,7 @@ total: 1043</pre>
 <li>The Assassination of Jesse James by the Coward Robert Ford #western</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//7qU0SOVcQ8BTJLodcAlulUAG16C.jpg");' onmouseleave='setPosterPath("");'>3:10 to Yuma #western</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//qdxQ8vZJoZuLqU9MXYW2vnRwhan.jpg");' onmouseleave='setPosterPath("");'>Paranoid Park (Gus Van Sant)</li>
+<li>bof: Superbad</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/33e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film_fran%C3%A7ais" rel="noopener" target="_blank">Césars 33</a></p>
 <ul>
@@ -1918,7 +1920,7 @@ total: 1043</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//jSOiz1h97i3qwjZJXY8SeLvjPsl.jpg");' onmouseleave='setPosterPath("");'>The Lunchbox 🇮🇳</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//jNKUXcwZr1vpgq7sGTCEqdngo4Z.jpg");' onmouseleave='setPosterPath("");'>Tangerines 🇬🇪</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8nff89qjYN3Hck5G33xeRPsM8TZ.jpg");' onmouseleave='setPosterPath("");'>Le Passé (Asghar Farhadi) 🇮🇷</li>
-<li>bof: Inside Llewyn Davis (frères Coen), All is Lost (Robert Redford), Nosotros los Nobles 🇲🇽, Only God Forgives (Nicolas Winding Refn), The Immigrant (James Gray), <del>The Wolf of Wall Street (Martin Scorsese)</del>, <del>Jobs</del>, <del>Fruitvale Station</del> ☀️, <del>The Best Offer</del>, <del>Blue Jasmine</del>
+<li>bof: Inside Llewyn Davis (frères Coen), All is Lost (Robert Redford), Nosotros los Nobles 🇲🇽, Only God Forgives (Nicolas Winding Refn), The Immigrant (James Gray), Upstream Color 🎥, <del>The Wolf of Wall Street (Martin Scorsese)</del>, <del>Jobs</del>, <del>Hard to Be a God</del> 🇷🇺 #sf, <del>Fruitvale Station</del> ☀️, <del>The Best Offer</del>, <del>Blue Jasmine</del>
 </li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/39e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 39</a></p>
@@ -2010,7 +2012,7 @@ total: 1043</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//hlK0e0wAQ3VLuJcsfIYPvb4JVud.jpg");' onmouseleave='setPosterPath("");'>Zootopia (Disney) #famille</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8pxn8CQ6SD6tly75lrKw08wfZKv.jpg");' onmouseleave='setPosterPath("");'>Swiss Army Man (Paul Dano, Daniel Radcliffe) ☀️</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//uDO8zWDhfWwoFdKS4fzkUJt0Rf0.jpg");' onmouseleave='setPosterPath("");'>La La Land (Damien Chazelle)</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//nu3WVABXz2W85N6JXTZOT1aWS3b.jpg");' onmouseleave='setPosterPath("");'>I Daniel Blake (Ken Loach) 🇬🇧 🌿</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//nu3WVABXz2W85N6JXTZOT1aWS3b.jpg");' onmouseleave='setPosterPath("");'>I, Daniel Blake (Ken Loach) 🇬🇧 🌿</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//liI4c3GYaKuAo4FsCF4RKvFFqbV.jpg");' onmouseleave='setPosterPath("");'>Better Watch Out 🍿 #film-de-noel</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//ys0jZr0quHERDUEoCboGQEKPvgQ.jpg");' onmouseleave='setPosterPath("");'>Moana (Disney)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//v3gf7T8hb8aYv05X2jHmxJQWPZr.jpg");' onmouseleave='setPosterPath("");'>Toni Erdmann 🇩🇪</li>
@@ -2114,7 +2116,7 @@ total: 1043</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//xjW2wgrC2ey0APDELP6NMD8tAq7.jpg");' onmouseleave='setPosterPath("");'>White Boy Rick (Matthew McConaughey) <a href="https://www.telerama.fr/cinema/films/white-boy-rick,n5091865.php" rel="noopener" target="_blank">📰</a>
 </li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//yV6edeSb1ykiNpJ1ekRz8GPhENr.jpg");' onmouseleave='setPosterPath("");'>Dark Waters (Todd Haynes, Mark Ruffalo)</li>
-<li>bof: Parasite (Bong Joon-ho) 🇰🇷 4🏆 🌿, The Gangster The Cop The Devil 🇰🇷 #thriller, Once Upon a Time in Hollywood (Tarentino), The Death of Dick Long, Uncut Gems, The Farewell</li>
+<li>bof: Parasite (Bong Joon-ho) 🇰🇷 4🏆 🌿, Sorry We Missed You (Ken Loach) 🇬🇧, The Gangster The Cop The Devil 🇰🇷 #thriller, Once Upon a Time in Hollywood (Tarentino), The Death of Dick Long, Uncut Gems, The Farewell</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/45e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 45</a></p>
 <ul>
@@ -2280,6 +2282,7 @@ total: 1043</pre>
 </li>
 </ul>
 </li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//vvC0C4mFszF06EwnGqRyEFWaMNC.jpg");' onmouseleave='setPosterPath("");'>L'Innocence (Monster) (Koreeda) 🇯🇵 ❤️</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//bkpPTZUdq31UGDovmszsg2CchiI.jpg");' onmouseleave='setPosterPath("");'>Tár (Cate Blanchett) ❤️ <a href="https://www.telerama.fr/cinema/films/tar-1-229287177.php" rel="noopener" target="_blank">📰</a> (6 nominations 🏆)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//nfs7DCYhgrEIgxKYbITHTzKsggf.jpg");' onmouseleave='setPosterPath("");'>The Iron Claw ❤️</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//tvUHVSTJV9ITON3oyHaWp7oaAc8.jpg");' onmouseleave='setPosterPath("");'>Perfect Days (Wim Wenders) 🇯🇵 ❤️</li>
@@ -2347,6 +2350,15 @@ total: 1043</pre>
 </div>
 <p><a href="https://editorial.rottentomatoes.com/guide/best-movies-of-2024/" rel="noopener" target="_blank">Rotten Tomatoes – Top Movies of 2024</a></p>
 <ul>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//tDKlFXWCvIkP2Xl2nMdI49kzwZx.jpg");' onmouseleave='setPosterPath("");'>Turtles All the Way Down ❤️ #coming-of-age
+<ul>
+<li>
+<blockquote>
+<p>❝ You're just a glorified bacterial colony ❞</p>
+</blockquote>
+</li>
+</ul>
+</li>
 <li>bof: Love Lies Bleeding, <del>Monkey Man</del>
 </li>
 </ul>
@@ -2386,8 +2398,6 @@ total: 1043</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//liMrNCgwWPARiiDoTJRRSAPq05Z.jpg");' onmouseleave='setPosterPath("");'>Antiviral</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//efwv6F2lGaghjPpBRSINHtoEiZB.jpg");' onmouseleave='setPosterPath("");'>I, Robot (2003, Will Smith)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//n4HyHxnKCJG8SbqeLEK1nU5JbIR.jpg");' onmouseleave='setPosterPath("");'>The Island (2005) : voir juste la première heure, après c'est nul</li>
-<li>pas vu: <a href="https://www.telerama.fr/cinema/films/il-est-difficile-d-etre-un-dieu,493827.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/il-est-difficile-d-etre-un-dieu,493827.php</a>
-</li>
 </ul>
 <table>
 <thead>
@@ -2447,7 +2457,7 @@ total: 1043</pre>
 </ul>
 <p><a href="https://loadingartist.com/comic/horror-movie/" rel="noopener" target="_blank">bonus: gag</a></p>
 <ul>
-<li>bof: Vermines (2023)</li>
+<li>bof: Don't Breathe (2016), Midsommar (2019), Vermines (2023)</li>
 </ul>
 <div class="markdown-heading">
 <h3 class="heading-element" id="aventure-et-divertissement-familial">Aventure et divertissement familial <a href="#top">↑</a>
