--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
   <summary>Statistiques: films vu par pays</summary>
   (n'inclut pas les films américains et français, vus en grand nombre)
   <pre style="font-size: 20px;line-height: 32px;">███████████████████████████████████████████████ 47 🇬🇧
-██████████████████████████████ 30 🇯🇵
+████████████████████████████████ 32 🇯🇵
 ██████████████████ 18 🇩🇪
 █████████████████ 17 🇪🇸
 ███████████████ 15 🇮🇹
@@ -339,7 +339,8 @@
 1948: ███ 3
 1949: █ 1
 1951: ██ 2
-1953: █ 1
+1952: █ 1
+1953: ██ 2
 1954: █ 1
 1956: █ 1
 1957: ██ 2
@@ -408,10 +409,10 @@
 2020: █████████████████ 17
 2021: ████████████████████████ 24
 2022: ████████████████████████████████ 32
-2023: █████████████████████████████████████████████████████████████ 61
+2023: ███████████████████████████████████████████████████████████████ 63
 2024: ████ 4
 
-total: 1058</pre>
+total: 1062</pre>
 </details>
 </span><h2 class="heading-element">Mon top 15 films préférés</h2>
 <a id="user-content-mon-top-15-films-préférés" class="anchor" aria-label="Permalink: Mon top 15 films préférés" href="#mon-top-15-films-pr%C3%A9f%C3%A9r%C3%A9s"><span aria-hidden="true" class="octicon octicon-link"></span></a>
@@ -554,12 +555,21 @@ total: 1058</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//aicdlO5vt7z2ARm279eGzJeYCLQ.jpg");' onmouseleave='setPosterPath("");'>A Streetcar Named Desire (Marlon Brando) : bof (dans mes souvenirs, vu il y a longtemps)</li>
 </ul>
 <div class="markdown-heading">
+<h3 class="heading-element" id="1952">1952 <a href="#top">↑</a>
+</h3>
+<a id="user-content-1952" class="anchor" aria-label="Permalink: 1952" href="#1952"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+</div>
+<ul>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//dgNTS4EQDDVfkzJI5msKuHu2Ei3.jpg");' onmouseleave='setPosterPath("");'>Ikiru (Akira Kurosawa) 🇯🇵 : longuet</li>
+</ul>
+<div class="markdown-heading">
 <h3 class="heading-element" id="1953">1953 <a href="#top">↑</a>
 </h3>
 <a id="user-content-1953" class="anchor" aria-label="Permalink: 1953" href="#1953"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 </div>
 <ul>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//d1VEnsFO7YcEc5gRqKXu2Bq2MMJ.jpg");' onmouseleave='setPosterPath("");'>Le Salaire de la peur (HG Clouzot) : début longuet</li>
+<li>Les Contes de la lune vague après la pluie (Kenji Mizoguchi) 🇯🇵 : bof, intrigue et dialogues banals</li>
 </ul>
 <div class="markdown-heading">
 <h3 class="heading-element" id="1954">1954 <a href="#top">↑</a>
@@ -2319,6 +2329,7 @@ total: 1058</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8Gxv8gSFCU0XGDykEGv7zR1n2ua.jpg");' onmouseleave='setPosterPath("");'>Oppenheimer (Christopher Nolan) : trop long</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//e9u7luSxFKOZgPTB9XHFnPArGdP.jpg");' onmouseleave='setPosterPath("");'>Dumb Money (Paul Dano)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//y9xS5NQTBnFjDoXhSFQeGxlmkoM.jpg");' onmouseleave='setPosterPath("");'>The Boy and the Heron (Hayao Miyazaki) 🇯🇵 : intrigue décousue</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//u6ae2MMh8PpSamO3cIttLM5B18v.jpg");' onmouseleave='setPosterPath("");'>The Last Stop in Yuma County</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//yvnIWt2j8VnDgwKJE2VMiFMa2Qo.jpg");' onmouseleave='setPosterPath("");'>One Life 🇬🇧 #history</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//eSatbygYZp8ooprBHZdb6GFZxGB.jpg");' onmouseleave='setPosterPath("");'>Radical 🇲🇽 ☀️ : belle histoire mais longuet</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//czUKm6JUutIg55EcRJ7CRAAzFMU.jpg");' onmouseleave='setPosterPath("");'>Cerrar los ojos (Víctor Erice) 🇪🇸 : émouvant mais longuet</li>
@@ -2338,18 +2349,18 @@ total: 1058</pre>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/49e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 49</a></p>
 <ul>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//56vAJbfNGZeq3pJtG7LhmAMgfTL.jpg");' onmouseleave='setPosterPath("");'>La Bête dans la jungle ❤️ <a href="https://www.telerama.fr/cinema/la-bete-dans-la-jungle-attention-film-culte-en-devenir_cri-7027824.php" rel="noopener" target="_blank">📰</a>
+</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//kQs6keheMwCxJxrzV83VUwFtHkB.jpg");' onmouseleave='setPosterPath("");'>Anatomie d'une chute (Justine Triet) 🌿 6✨ #film-de-procès</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//mpGbDJUsPdnoy4Xukz7S4tZRciN.jpg");' onmouseleave='setPosterPath("");'>Mars Express #sf <a href="https://www.telerama.fr/cinema/mars-express-un-cyberpolar-enthousiasmant_cri-7029856.php" rel="noopener" target="_blank">📰</a>
 </li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//6AXHh9H7XeUqxl8Ijp9ADkpxfM0.jpg");' onmouseleave='setPosterPath("");'>Jeanne du Barry (Maïwenn) <a href="https://www.telerama.fr/cinema/films/jeanne-du-barry-1-260155581.php" rel="noopener" target="_blank">📰</a>
 </li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//kQs6keheMwCxJxrzV83VUwFtHkB.jpg");' onmouseleave='setPosterPath("");'>Anatomie d'une chute (Justine Triet) 🌿 6✨ #film-de-procès</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//fYbjXgBQUPgj1mtcmH0GafbJlXV.jpg");' onmouseleave='setPosterPath("");'>Le Procès Goldman <a href="https://www.telerama.fr/cinema/cannes-le-proces-goldman-portrait-cinglant-et-fascinant-d-un-braqueur-revolutionnaire-7015587.php" rel="noopener" target="_blank">📰</a>
 </li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//hfExJPcbBtDeFDEb7I1By72Drlr.jpg");' onmouseleave='setPosterPath("");'>Les Trois Mousquetaires #aventure</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//ptJWIUOm3aA15rjz5SJJwS6WJU4.jpg");' onmouseleave='setPosterPath("");'>Je verrai toujours vos visages (Jeanne Herry)</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//56vAJbfNGZeq3pJtG7LhmAMgfTL.jpg");' onmouseleave='setPosterPath("");'>La Bête dans la jungle <a href="https://www.telerama.fr/cinema/la-bete-dans-la-jungle-attention-film-culte-en-devenir_cri-7027824.php" rel="noopener" target="_blank">📰</a>
-</li>
-<li>bof: La Passion de Dodin Bouffant, Chien de la Casse, Yannick (Quentin Dupieux), Retour à Séoul, Le Règne animal (Romain Duris) 5✨, Vampire humaniste cherche suicidaire consentant (Québec), Mon Crime (François Ozon), Une année difficile</li>
+<li>bof: La Passion de Dodin Bouffant, Chien de la Casse, Le Vourdalak, Yannick (Quentin Dupieux), Retour à Séoul, Le Règne animal (Romain Duris) 5✨, Vampire humaniste cherche suicidaire consentant (Québec), Mon Crime (François Ozon), Une année difficile</li>
 </ul>
 <div class="markdown-heading">
 <h3 class="heading-element" id="2024">2024 <a href="#top">↑</a>
@@ -2648,10 +2659,7 @@ total: 1058</pre>
 </ul>
 <p>Japonais:</p>
 <ul>
-<li>à découvrir: <a href="https://www.telerama.fr/recherche/films?q=Mizoguchi" rel="noopener" target="_blank">Mizoguchi</a>
-</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//hLloiElMWdB6c7WxM4OZhDhs2d4.jpg");' onmouseleave='setPosterPath("");'><a href="https://www.rottentomatoes.com/celebrity/akirakurosawa" rel="noopener" target="_blank">Akira Kurosawa</a></li>
-<li><a href="https://www.rottentomatoes.com/celebrity/takeshi_kitano" rel="noopener" target="_blank">Takeshi Kitano</a></li>
+<li><a href="https://www.rottentomatoes.com/celebrity/hirokazu-koreeda" rel="noopener" target="_blank">Koreeda</a></li>
 </ul>
 <p><a href="#sommaire">⬆️ retour sommaire</a></p>
 
