--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
 ███████████████ 15 🇮🇹
 █████████████ 13 🇰🇷
 ████████ 8 🇨🇳 🇲🇽 🇷🇺
-██████ 6 🇩🇰 🇭🇰 🇮🇷 🇸🇪
-█████ 5 🇮🇳 🇹🇷
-████ 4 🇦🇺
-███ 3 🇧🇪 🇨🇱 🇮🇪 🇳🇿 🇵🇱 🇿🇦
-██ 2 🇦🇷 🇧🇷 🇨🇴 🇮🇱 🇮🇸 🇹🇭
+███████ 7 🇸🇪
+██████ 6 🇩🇰 🇭🇰 🇮🇷
+█████ 5 🇦🇺 🇮🇳 🇹🇷
+███ 3 🇧🇪 🇨🇱 🇮🇪 🇮🇸 🇳🇿 🇵🇱 🇿🇦
+██ 2 🇦🇷 🇧🇷 🇨🇴 🇮🇱 🇹🇭
 █ 1 🇦🇹 🇧🇹 🇨🇦 🇨🇿 🇫🇮 🇬🇪 🇬🇷 🇮🇩 🇰🇭 🇰🇿 🇱🇧 🇳🇬 🇳🇴 🇵🇪 🇷🇴 🇷🇸 🇸🇬 🇸🇳 🇺🇾</pre>
 </details>
 </span><span><details>
@@ -378,7 +378,7 @@
 1989: ███████ 7
 1990: █████████ 9
 1991: ████████ 8
-1992: ████████████ 12
+1992: █████████████ 13
 1993: ██████████████ 14
 1994: ███████████████ 15
 1995: ██████████████████ 18
@@ -396,7 +396,7 @@
 2007: ████████████████████████ 24
 2008: ██████████████████████████████ 30
 2009: ██████████████████████████████ 30
-2010: █████████████████████████████ 29
+2010: ██████████████████████████████ 30
 2011: ██████████████████████████████ 30
 2012: █████████████████████████ 25
 2013: ████████████████████████████████████████ 40
@@ -408,11 +408,11 @@
 2019: ████████████████████████████████ 32
 2020: █████████████████ 17
 2021: ████████████████████████ 24
-2022: ████████████████████████████████ 32
+2022: █████████████████████████████████ 33
 2023: ███████████████████████████████████████████████████████████████ 63
-2024: ████ 4
+2024: █████ 5
 
-total: 1062</pre>
+total: 1066</pre>
 </details>
 </span><h2 class="heading-element">Mon top 15 films préférés</h2>
 <a id="user-content-mon-top-15-films-préférés" class="anchor" aria-label="Permalink: Mon top 15 films préférés" href="#mon-top-15-films-pr%C3%A9f%C3%A9r%C3%A9s"><span aria-hidden="true" class="octicon octicon-link"></span></a>
@@ -874,7 +874,7 @@ total: 1062</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//21BANIzXEKyZDUFOr9NdUEgP4EA.jpg");' onmouseleave='setPosterPath("");'>L'Homme qui voulut être roi (The Man Who Would Be King) (Sean Connery, Michael Caine) 🇬🇧 #aventure</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//7EhH6R5RK3mPSe11zbHgxcF9huD.jpg");' onmouseleave='setPosterPath("");'>Section spéciale (Costa-Gavras)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//lxM6kqilAdpdhqUl2biYp5frUxE.jpg");' onmouseleave='setPosterPath("");'>Jaws (Steven Spielberg)</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//bIOrDQ3Gg68k3qJAnRU7nIZr0BW.jpg");' onmouseleave='setPosterPath("");'>Dersou Ouzala (Akira Kurosawa) 🇷🇺🇯🇵</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//bIOrDQ3Gg68k3qJAnRU7nIZr0BW.jpg");' onmouseleave='setPosterPath("");'>Dersou Ouzala (Akira Kurosawa) 🇷🇺🇯🇵 🎥 #aventure</li>
 <li>bof: The Rocky Horror Picture Show</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/1re_c%C3%A9r%C3%A9monie_des_C%C3%A9sar" rel="noopener" target="_blank">Césars 1</a></p>
@@ -939,7 +939,7 @@ total: 1062</pre>
 <p><a href="https://fr.wikipedia.org/wiki/52e_c%C3%A9r%C3%A9monie_des_Oscars#Palmar%C3%A8s" rel="noopener" target="_blank">Oscars 52</a></p>
 <ul>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//culCEdj4srLljefgn4XKd6k3C5t.jpg");' onmouseleave='setPosterPath("");'>All That Jazz (Bob Fosse) 🎥 4🏆 🌿 ❤️</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//gQB8Y5RCMkv2zwzFHbUJX3kAhvA.jpg");' onmouseleave='setPosterPath("");'>Apocalypse Now (FF Coppola) 🎥 💙</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//gQB8Y5RCMkv2zwzFHbUJX3kAhvA.jpg");' onmouseleave='setPosterPath("");'>Apocalypse Now (FF Coppola) 🎥 🌿 💙</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//2Gf2eY65KFE31OsNC3JqH29Mvnr.jpg");' onmouseleave='setPosterPath("");'>Kramer contre Kramer (Dustin Hoffman, Meryl Streep) 🏆</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//2ZVXzC749OScK1pBtlhW0wcIN3h.jpg");' onmouseleave='setPosterPath("");'>Le Tambour 🇩🇪 🏆 (meilleur film étranger) 🌿 <a href="https://www.telerama.fr/cinema/films/le-tambour,429135.php" rel="noopener" target="_blank">📰</a>
 </li>
@@ -1224,7 +1224,7 @@ total: 1062</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//o2s9ow0uRRm1BcF3teznk5twd90.jpg");' onmouseleave='setPosterPath("");'>Malcolm X (Spike Lee) ✊🏾 #biopic</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//zcaEDx8KlVfh4vKfMNLhiSi5Oz4.jpg");' onmouseleave='setPosterPath("");'>Glengarry Glen Ross #comédie-de-bureau</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//kNpjv5byJM8H83JJwPLMDyB095t.jpg");' onmouseleave='setPosterPath("");'>Le Dernier des Mohicans (Michael Mann, Daniel Day‑Lewis)</li>
-<li>bof: Night on Earth (Jim Jarmusch)</li>
+<li>bof: Night on Earth (Jim Jarmusch), The Player</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/18e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar" rel="noopener" target="_blank">Césars 18</a></p>
 <ul>
@@ -1713,7 +1713,7 @@ total: 1062</pre>
 <ul>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//3MJUo4bCPai5r9zrw7nTS8sVzQ7.jpg");' onmouseleave='setPosterPath("");'>Le Scaphandre et le Papillon 🏆</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//aU8i2QAdTyRR1nYb36Gq51xXP8p.jpg");' onmouseleave='setPosterPath("");'>Persépolis 🇮🇷</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//fd6zXkOa3LOxOrtywrB4Nhz6N.jpg");' onmouseleave='setPosterPath("");'>La Graine et le Mulet</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//fd6zXkOa3LOxOrtywrB4Nhz6N.jpg");' onmouseleave='setPosterPath("");'>La Graine et le Mulet (Abdellatif Kechiche)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8yj6tkyp7dvdzkkIasX2SUmZd81.jpg");' onmouseleave='setPosterPath("");'>99 Francs</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//hVBndYreVtlBhIb0K4uSwmnGVSf.jpg");' onmouseleave='setPosterPath("");'>Louise-Michel (Délépine et Kervern) <a href="https://www.telerama.fr/cinema/films/louise-michel,359692.php" rel="noopener" target="_blank">📰</a> ☀️</li>
 </ul>
@@ -1781,7 +1781,7 @@ total: 1062</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//x5csgIwwoMzZYsFkV9c5A18DGIA.jpg");' onmouseleave='setPosterPath("");'>London River (Rachid Bouchareb) <a href="https://www.telerama.fr/cinema/films/london-river,389614.php" rel="noopener" target="_blank">📰</a> (vu ?)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//uluhlXubGu1VxU63X9VHCLWDAYP.jpg");' onmouseleave='setPosterPath("");'>The Hangover (Very Bad Trip) #comédie</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//ezFQaPf4cOEfsl39Me0gSV29d7V.jpg");' onmouseleave='setPosterPath("");'>Public Enemies (Michael Mann, Johnny Depp) : ok sans plus</li>
-<li>bof: Invictus (Clint Eastwood) 🇿🇦🏉, A Serious Man (frères Coen), Mr. Nobody, Valhalla Rising (Nicolas Winding Refn), Dogtooth 🇬🇷, The Boat That Rocked (Good Morning England) 🇬🇧, Avatar, The Limits of Control (Jim Jarmusch), <del>Enter the Void (Gaspar Noé)</del>
+<li>bof: Invictus (Clint Eastwood) 🇿🇦 🏉, A Serious Man (frères Coen), Mr. Nobody, Valhalla Rising (Nicolas Winding Refn), Dogtooth 🇬🇷, The Boat That Rocked (Good Morning England) 🇬🇧, Avatar, The Limits of Control (Jim Jarmusch), <del>Enter the Void (Gaspar Noé)</del>
 </li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/35e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 35</a></p>
@@ -1830,6 +1830,7 @@ total: 1062</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//f19wwAy4q1oAmGRBLvxRIq3bvd1.jpg");' onmouseleave='setPosterPath("");'>Mammuth (Délépine et Kervern, Gérard Depardieu) <a href="https://www.telerama.fr/cinema/films/mammuth,405676.php" rel="noopener" target="_blank">📰</a>
 </li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//ozR4LwG9vjV9oFKtEYUO8VsYamf.jpg");' onmouseleave='setPosterPath("");'>La Princesse de Montpensier (vu ?)</li>
+<li>bof: Les Petits Mouchoirs (Guillaume Canet)</li>
 </ul>
 <div class="markdown-heading">
 <h3 class="heading-element" id="2011">2011 <a href="#top">↑</a>
@@ -1843,7 +1844,7 @@ total: 1062</pre>
 <li>Millenium, the Girl with the Dragon Tattoo (David Fincher) #thriller</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//cAWLz9kFv4xc6IsEXTj2DrcqD55.jpg");' onmouseleave='setPosterPath("");'>Shame (Steve McQueen, avec Michael Fassbender) 🎥🎥</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//l8cwuB5WJSoj4uMAsnzuHBOMaSJ.jpg");' onmouseleave='setPosterPath("");'>The Tree of Life (Terrence Malick)</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//pgMIdInSIGw0uSory7yEBFGrvIS.jpg");' onmouseleave='setPosterPath("");'>Margin Call (Kevin Spacey)</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//pgMIdInSIGw0uSory7yEBFGrvIS.jpg");' onmouseleave='setPosterPath("");'>Margin Call (Kevin Spacey) 💵</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//t7ZyIR941krELzP7POiFUu0yhFq.jpg");' onmouseleave='setPosterPath("");'>Starbuck 🇨🇦 #comédie</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//vGujQOfGIaZx5UWxf9JdNEOxl7B.jpg");' onmouseleave='setPosterPath("");'>Rango (Gore Verbinski) #western</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//bsL9UZPCmQKgl88wXwMulKuw9Jh.jpg");' onmouseleave='setPosterPath("");'>Tinker Tailor Soldier Spy (La Taupe) 🇬🇧 #thriller</li>
@@ -1931,13 +1932,13 @@ total: 1062</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//jSOiz1h97i3qwjZJXY8SeLvjPsl.jpg");' onmouseleave='setPosterPath("");'>The Lunchbox 🇮🇳</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//jNKUXcwZr1vpgq7sGTCEqdngo4Z.jpg");' onmouseleave='setPosterPath("");'>Tangerines 🇬🇪</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8nff89qjYN3Hck5G33xeRPsM8TZ.jpg");' onmouseleave='setPosterPath("");'>Le Passé (Asghar Farhadi) 🇮🇷</li>
-<li>bof: Inside Llewyn Davis (frères Coen), All is Lost (Robert Redford), Nosotros los Nobles 🇲🇽, Only God Forgives (Nicolas Winding Refn), The Immigrant (James Gray), Upstream Color 🎥, Snowpiercer (Bong Joon-ho), <del>The Wolf of Wall Street (Martin Scorsese)</del>, <del>Jobs</del>, <del>Hard to Be a God</del> 🇷🇺 #sf, <del>Fruitvale Station</del> ☀️, <del>The Best Offer</del>, <del>Blue Jasmine</del>
+<li>bof: Inside Llewyn Davis (frères Coen), All is Lost (Robert Redford), Nosotros los Nobles 🇲🇽, Only God Forgives (Nicolas Winding Refn), The Immigrant (James Gray), Upstream Color 🎥, Snowpiercer (Bong Joon-ho), <del>The Wolf of Wall Street (Martin Scorsese)</del> 💵, <del>Jobs</del>, <del>Hard to Be a God</del> 🇷🇺 #sf, <del>Fruitvale Station</del> ☀️, <del>The Best Offer</del>, <del>Blue Jasmine</del>
 </li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/39e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 39</a></p>
 <ul>
 <li>L'Écume des jours (Michel Gondry)</li>
-<li>bof: Quai d'Orsay (Bertrand Tavernier), La vie d'Adèle 🌿, L'inconnu du lac, Jimmy P., La Vénus à la fourrure</li>
+<li>bof: Quai d'Orsay (Bertrand Tavernier), La vie d'Adèle (Abdellatif Kechiche) 🌿, L'inconnu du lac, Jimmy P., La Vénus à la fourrure</li>
 </ul>
 <div class="markdown-heading">
 <h3 class="heading-element" id="2014">2014 <a href="#top">↑</a>
@@ -1996,7 +1997,7 @@ total: 1062</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//dnZJ82cp148EZyOvlGevIembqnp.jpg");' onmouseleave='setPosterPath("");'>The Assassin 🇨🇳 🎥 ❤️ #arts-martiaux</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//ji3ecJphATlVgWNY0B0RVXZizdf.jpg");' onmouseleave='setPosterPath("");'>The Revenant (Alejandro González Iñárritu) 🎥</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//7Y9ILV1unpW9mLpGcqyGQU72LUy.jpg");' onmouseleave='setPosterPath("");'>The Lobster (Yórgos Lánthimos, Colin Farrell)</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//isuQWbJPbjybBEWdcCaBUPmU0XO.jpg");' onmouseleave='setPosterPath("");'>The Big Short</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//isuQWbJPbjybBEWdcCaBUPmU0XO.jpg");' onmouseleave='setPosterPath("");'>The Big Short 💵</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//4MmTHpn2Y8emqvBgvOjufImUmKZ.jpg");' onmouseleave='setPosterPath("");'>Bone Tomahawk #western</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//pK5y82ISbaBWa87R5neub8qojDk.jpg");' onmouseleave='setPosterPath("");'>Cemetery of Splendour (Apichatpong Weerasethakul) 🇹🇭 🌿</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//4DJ1zNr4Y6q7zQ27goEYla46VdO.jpg");' onmouseleave='setPosterPath("");'>Anomalisa</li>
@@ -2170,7 +2171,7 @@ total: 1062</pre>
 <ul>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8Vc5EOUEIF1EUXuX9eLFf7BvN3P.jpg");' onmouseleave='setPosterPath("");'>Nomadland (Frances McDormand) 🏆 ☀️ : style documentaire sur un sujet déjà abordé longuement dans les médias, on n'apprend rien</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//73QoFJFmUrJfDG2EynFjNc5gJxk.jpg");' onmouseleave='setPosterPath("");'>Promising Young Woman : divertissement sympa sans plus</li>
-<li>Sound of Metal, Soul (Pixar), Minari, Bacurau 🇧🇷, News of the World (Tom Hanks) #western, The Nest <a href="https://www.telerama.fr/cinema/films/the-nest,n6703873.php" rel="noopener" target="_blank">📰</a>, Mank, Pig, The Call of the Wild, Vivarium, <del>Tenet</del>
+<li>Sound of Metal, Soul (Pixar), Minari, Bacurau 🇧🇷, News of the World (Tom Hanks) #western, The Paper Tigers #kungfu, The Nest <a href="https://www.telerama.fr/cinema/films/the-nest,n6703873.php" rel="noopener" target="_blank">📰</a>, Mank, Pig, The Call of the Wild, Vivarium, <del>Tenet</del>
 </li>
 </ul>
 </li>
@@ -2227,6 +2228,7 @@ total: 1062</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//mfMqVqA3xjZnLbKKNu6Kr5WxUT2.jpg");' onmouseleave='setPosterPath("");'>Puss in Boots: The Last Wish (Chat potté 2) ❤️ #famille</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//jG4UI2dbNWlWtTTupjeU3fRJ5Fn.jpg");' onmouseleave='setPosterPath("");'>She Said (affaire Weinstein)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//h3zAzTMs5EP3cKusOxFNGSFE1WI.jpg");' onmouseleave='setPosterPath("");'>Spirited (Ryan Reynolds, Will Ferrell) 🍿 #film-de-noel</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//ukK4LoKHROrzB6zvdKq0nGl5RTA.jpg");' onmouseleave='setPosterPath("");'>Hundreds of Beavers</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//xvsiRSy1kIwlySogzOxkCFrJWYx.jpg");' onmouseleave='setPosterPath("");'>Official Competition (Penélope Cruz, Antonio Banderas) 🇪🇸</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//xWic7kPq13oRxYjbGLApXCnc7pz.jpg");' onmouseleave='setPosterPath("");'>Hustle (Adam Sandler) 🏀</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//s0cWPhzpKJ4kspaleMcOduHBFBw.jpg");' onmouseleave='setPosterPath("");'>Godland 🇩🇰🇮🇸 <a href="https://www.telerama.fr/cinema/films/godland-1-215068907.php" rel="noopener" target="_blank">📰</a>
@@ -2327,7 +2329,7 @@ total: 1062</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//dB6Krk806zeqd0YNp2ngQ9zXteH.jpg");' onmouseleave='setPosterPath("");'>Killers of the Flower Moon (Martin Scorsese, Leonardo DiCaprio) : intrigue façon policier, très convenu</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//vcZWJGvB5xydWuUO1vaTLI82tGi.jpg");' onmouseleave='setPosterPath("");'>Napoléon (Ridley Scott) : impressionante scène de la bataille de Waterloo, le reste est très superficiel</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8Gxv8gSFCU0XGDykEGv7zR1n2ua.jpg");' onmouseleave='setPosterPath("");'>Oppenheimer (Christopher Nolan) : trop long</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//e9u7luSxFKOZgPTB9XHFnPArGdP.jpg");' onmouseleave='setPosterPath("");'>Dumb Money (Paul Dano)</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//e9u7luSxFKOZgPTB9XHFnPArGdP.jpg");' onmouseleave='setPosterPath("");'>Dumb Money (Paul Dano) 💵</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//y9xS5NQTBnFjDoXhSFQeGxlmkoM.jpg");' onmouseleave='setPosterPath("");'>The Boy and the Heron (Hayao Miyazaki) 🇯🇵 : intrigue décousue</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//u6ae2MMh8PpSamO3cIttLM5B18v.jpg");' onmouseleave='setPosterPath("");'>The Last Stop in Yuma County</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//yvnIWt2j8VnDgwKJE2VMiFMa2Qo.jpg");' onmouseleave='setPosterPath("");'>One Life 🇬🇧 #history</li>
@@ -2378,6 +2380,7 @@ total: 1062</pre>
 </li>
 </ul>
 </li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//H6vke7zGiuLsz4v4RPeReb9rsv.jpg");' onmouseleave='setPosterPath("");'>Challengers</li>
 <li>bof: Love Lies Bleeding, <del>Monkey Man</del>
 </li>
 </ul>
@@ -2462,7 +2465,7 @@ total: 1062</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//1CvJ6diBACKPVGOpcWuY4XPQdqX.jpg");' onmouseleave='setPosterPath("");'>The Mist (2007) : la fin vend le film, sinon c'est assez médiocre</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//oenWLndA3kg0daBOxgmHdWHHrr8.jpg");' onmouseleave='setPosterPath("");'>Morse (2008) 🇸🇪 🎥 <a href="https://www.telerama.fr/cinema/films/morse,365114.php" rel="noopener" target="_blank">📰</a> : très beau mais le scénario est un peu mou</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//wVYREutTvI2tmxr6ujrHT704wGF.jpg");' onmouseleave='setPosterPath("");'>The Conjuring (2013)</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//qt3fqapeo94TfvMyld8P7gkpXLz.jpg");' onmouseleave='setPosterPath("");'>The Babadook (2014)</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//qt3fqapeo94TfvMyld8P7gkpXLz.jpg");' onmouseleave='setPosterPath("");'>The Babadook (2014) 🇦🇺</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//iwnQ1JH1wdWrGYkgWySptJ5284A.jpg");' onmouseleave='setPosterPath("");'>It Follows (2014)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//4ririIPMbOnbnZlQGnTYgDIcbxa.jpg");' onmouseleave='setPosterPath("");'>A Girl Walks Home Alone at Night (2014) 🇮🇷</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//qn53D574tT0YRyLgirEFHQwGUXw.jpg");' onmouseleave='setPosterPath("");'>Creep (2014)</li>
@@ -2481,7 +2484,7 @@ total: 1062</pre>
 </ul>
 <p><a href="https://loadingartist.com/comic/horror-movie/" rel="noopener" target="_blank">bonus: gag</a></p>
 <ul>
-<li>bof: Don't Breathe (2016), Midsommar (2019), Vermines (2023)</li>
+<li>bof: Don't Breathe (2016), Midsommar (2019) 🇸🇪, Lamb (2021) 🇮🇸, Vermines (2023)</li>
 </ul>
 <div class="markdown-heading">
 <h3 class="heading-element" id="aventure-et-divertissement-familial">Aventure et divertissement familial <a href="#top">↑</a>
